--- a/client/src/components/List/MsgList.css
+++ b/client/src/components/List/MsgList.css
@@ -24,6 +24,6 @@
   margin-right: 20px;
 }
 .my-message .MuiListItemText-root .MuiTypography-root{
-  background-color: rgb(47, 228, 47);
+  background-color: #64dd17;
   text-align: left;
 }
